# shivanand_consulting

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
shivanand_consulting/: hooks.py
shivanand_consulting/api/: lead.py
shivanand_consulting/public/css/: site-theme.css
shivanand_consulting/public/js/: site.js
shivanand_consulting/www/: about.html  blog-erpnext-implementation-cost-india.html  blog-erpnext-vs-tally-growing-business-india.html  blog-fmcg-distribution-erpnext.html  blog-razorpay-erpnext-payments-integration-india.html  blog-signs-your-erp-implementation-needs-rescue.html  blog.html  case-studies.html  contact.html  erpnext-implementation-bangalore.html  index.html  industries.html  robots.txt  services.html  sitemap.xml
