[project]
name = "shivanand_consulting"
authors = [
	{ name = "ATHRU Technologies", email = "contact@athrutec.com" }
]
description = "Personal consulting website for Shivanand Banahatti — shivanandbanahatti.com"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
